# rekor-monitor

./: Dockerfile  Dockerfile.ctlog-monitor.rh  Dockerfile.rekor-monitor.rh  Dockerfile.rh  go.mod  go.sum  monitor-wrapper.py  pyproject.toml  requirements-build.in  requirements-build.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  trigger-konflux-builds.txt
.github/workflows/: code-coverage.yml  test-rekor-integration.yml
.tekton/: ctlog-monitor-pull-request.yaml  ctlog-monitor-push.yaml  ctlog-monitor-v1-3-pull-request.yaml  ctlog-monitor-v1-3-push.yaml  rekor-monitor-pull-request.yaml  rekor-monitor-push.yaml  rekor-monitor-v1-3-pull-request.yaml  rekor-monitor-v1-3-push.yaml
cmd/rekor_monitor/: main.go
internal/cmd/: common_test.go
pkg/rekor/: client.go  verifier.go
pkg/server/: metrics_test.go
pkg/test/rekor_integration/: rekor_monitor_integration_test.go
test/integration/: main_test.go  monitor_basic_test.go  monitor_tampered_test.go  monitor_truncation_forking_test.go  monitor_unavailable_log_server_test.go  monitor_valid_test.go  rekor_monitor_integration_test.go  rekor_monitor_integration_test.sh  rekor_utils.go  utils_test.go
test/integration/data/tuf-repo/: 1.root.json  1.snapshot.json  1.targets.json  2.snapshot.json  2.targets.json  3.snapshot.json  3.targets.json  root.json  timestamp.json
